k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deploy
  labels:
    app: auth-service-app
spec:
  selector:
    matchLabels:
      app: auth-service-app
  template:
    metadata:
      labels:
        app: auth-service-app
    spec:
      containers:
        - name: auth-service-containers
          image: andreyszdlv/auth-service
          ports:
            - containerPort: 8073
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 8073
      targetPort: 8073
      name: http
  selector:
    app: auth-service-app
