k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deploy
  labels:
    app: eureka-server-app
spec:
  selector:
    matchLabels:
      app: eureka-server-app
  template:
    metadata:
      labels:
        app: eureka-server-app
    spec:
      containers:
        - name: eureka-server-containers
          image: andreyszdlv/eureka-server
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: ClusterIP
  ports:
    - port: 8761
      targetPort: 8761
      name: http
  selector:
    app: eureka-server-app
