k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deploy
  labels:
    app: notification-service-app
spec:
  selector:
    matchLabels:
      app: notification-service-app
  template:
    metadata:
      labels:
        app: notification-service-app
    spec:
      containers:
        - name: notification-service-containers
          image: andreyszdlv/notification-service
          ports:
            - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 8072
      targetPort: 8072
      name: http
  selector:
    app: notification-service-app
