k8s/post-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service-deploy
  labels:
    app: post-service-app
spec:
  selector:
    matchLabels:
      app: post-service-app
  template:
    metadata:
      labels:
        app: post-service-app
    spec:
      containers:
        - name: post-service-containers
          image: andreyszdlv/post-service
          ports:
            - containerPort: 8071
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: ClusterIP
  ports:
    - port: 8071
      targetPort: 8071
      name: http
  selector:
    app: post-service-app
