k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deploy
  labels:
    app: api-gateway-app
spec:
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-containers
          image: andreyszdlv/api-gateway
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      name: http
  selector:
    app: api-gateway-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  rules:
    - host: social-network.nn.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8082
